fixed date filter on mobile

--- a/components/analytics/common/modal/date-picker/date-picker.module.css
+++ b/components/analytics/common/modal/date-picker/date-picker.module.css
@@ -24,3 +24,33 @@
     margin-left: 14px;
     padding-top: 5px;
   }
+
+  .custom input {
+    width: 147px !important;
+  }
+
+  .custom > div > div > div {
+    position: relative;
+  }
+
+  .custom input {
+    width: 140px;
+    padding: 12px;
+    background: #faf8f5;
+    border: 1px solid #dedad4;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #08135e;
+  }
+  .custom > div > div > div {
+    position: relative;
+  }
+  .custom > div > div > div > div {
+    background: #fff;
+    position: absolute;
+    right: 0px;
+    z-index: 999999;
+    box-shadow: 0px 12px 16px -4px #9aa1a733;
+    overflow: visible;
+  }
